username and password hidded

--- a/templates/view.mustache
+++ b/templates/view.mustache
@@ -21,17 +21,15 @@
 
 <h1 id="title">Input token:</h1>
 <form>
-  <label for="username">Username: </label>
   <input
-    type="text"
+    type="hidden"
     name="username"
     id="username"
     class="form-control"
     value="{{ username }}"
   />
-  <label for="password">Password: </label>
   <input
-    type="password"
+    type="hidden"
     id="password"
     name="password"
     class="form-control"
